# osc2023

./:     .pub  .bash_history  .gitignore  .~lock. .pub#  LICENSE  LICENSE.md  Makefile  Makefile.gcc  Makefile.old  README.md  README.org  a.S  activate.bat  aux.h  command.txt  communicate.py  config.txt  copy_kernel.sh  copy_ramdisk.sh  createimg.sh  debug_mini.sh  emu.sh  env_setup.sh  gdb_test_bootloader.txt  gdb_test_with_qemu.txt  git-usage.org  head.S  helper.c  initramfs.cpio  kernel.c  kernel.h  kernel8.elf  kernel8.img  lab6.cpio  lab7.cpio  lab8.cpio  link.ld  linker.ld  load.py  (+15 more)
lab2/: .gitignore  CMakeLists.txt  Makefile  README.md  bcm2710-rpi-3-b-plus.dtb  bcm2710-rpi-3-b.dtb  boot.S  config.txt  dump.txt  files.md  initramfs.cpio  kernel8.elf  kernel8.img  linker.ld  load.sh  make_initramfs.sh  send-kernel.py  send_kernel.py  send_kernel_to_bootloader.py  sendimg.py  start.S  test.sh  upload.py  write.sh  writer.py
lab2/boot/: Makefile  boot.S  bootloader.c  linker.ld
lab2/boot/script/: send_kernel.py
lab2/bootloader/: BLboot.S  CMakeLists.txt  Makefile  boot.S  boot.s  booting.S  bootloader.c  bootloader.elf  bootloader.img  config.txt  kernel8.elf  kernel8.img  kernel_utils.S  link.ld  linker.ld  main.c  makefile  pass_img.sh  send_img.py  shell.c  start.S  uart.c  utils.c
lab2/bootloader/header/: bootloader.h  reboot.h  shell.h  uart.h  utils.h
lab2/bootloader/include/: aux.h  gpio.h  mini_uart.h  my_str.h  reboot.h  relocate.h  shell.h  stdarg.h  system.h  uart.h  utils.h
lab2/bootloader/src/: boot.S  kernel.c  link.ld  linker.ld  linker_bl.ld  main.c  mini_uart.c  my_str.c  reboot.c  relocate.c  shell.c  start.S  system.c  uart.c  uart1.c  utils.c
lab2/bootloader_uart0/: Makefile  a.hex  bootloader.img  make
lab2/bootloader_uart0/src/: linker.ld  main.c  uart.c  uart.h
lab2/c/: Makefile
lab2/c/src/: bootloader-main.c  bootloader-reloc.S  bootloader-reloc.ld  bootloader.ld  (+10 more)
lab2/cpio/: initramfs.cpio
lab2/create_fs/: create_cpio.sh  initramfs.cpio
lab2/include/: aux.h  bootloader.h  command.h  cpio.h  device_tree.h  devicetree.h  devtree.h  dtb.h  filesystem.h  gpio.h  heap.h  initrd.h  mailbox.h  malloc.h  mbox.h  mem.h  mem_utils.h  mini_uart.h  mmio.h  my_math.h  my_str.h  print.h  ramdisk.h  read.h  reboot.h  shell.h  stdint.h  str.h  str_tool.h  string.h  string_utils.h  type.h  uart.h  utils.h
lab2/kernel/: CMakeLists.txt  Makefile  _initramfs.cpio  bcm2710-rpi-3-b-plus.dtb  boot.sh  boot_kernel.S  config.txt  cpio.c  cpio.h  devtree.c  devtree.h  grep  initramfs.cpio  kernel.c  kernel.elf  kernel.img  kernel8.elf  kernel8.img  link.ld  linker.ld  mailbox.c  main.c  makefile  malloc.c  malloc.h  ramdisk  ramdisk.c  shell.c  shell.h  start.S  start.s  temp  test.sh
lab2/lib/: CMakeLists.txt  Makefile  cpio.c  devicetree.c  devtree.c  linker.ld  mailbox.c  mbox.c  mem.c  mini_uart.c  muart.c  print.c  read.c  shell.c  string.c  utils.c
lab2/raspi3b/: bcm2710-rpi-3-b-plus.dtb  initramfs.cpio
lab2/rootfs/: 1.txt  file  file1  file1.txt  file2  file2.txt  file3  initramfs.cpio  testfile1
lab2/shell/: cpio.c  dtb.c  kernel8.elf  linker.ld  mailbox.c  main.c  makefile  malloc.c  reboot.c  shell.c  shell.img  uart.c  utils.c
lab2/src/: Makefile  boot.S  boot.s  command.c  cpio.c  device_tree.c  devicetree.c  dtb.c  filesystem.c  heap.c  initrd.c  kernel.c  linker.ld  mailbox.c  main.c  malloc.c  mbox.c  mem.c  mem_utils.c  mini_uart.c  mm.S  my_math.c  ramdisk.c  shell.c  sprintf.c  start.S  start.s  str.c  string.c  string_utils.c  system.c  terminal.c  uart.c  utils.S  utils.c
lab2/tests/: .gitignore  build-initrd.sh
lab2/toolbox/: send_image_to_bootloader.py
lab2/uart_bootloader/: Makefile  bootloader.c
lab2/utils/: mini_uart.c  mm.S  str_tool.c  strint.c
rust-version/: Cargo.toml  Makefile
rust-version/.cargo/: config
rust-version/src/: boot.S  console.rs  linker.ld  main.rs  panic.rs  print.rs
(+2520 files in other folders)
