[package]
name = "rust-kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kernel"
path = "src/main.rs"
test = false
bench = false


[dependencies]
aarch64-cpu = "9.4.0"
tock-registers = "0.9.0"

[lib]
test = false

